clusters/blimp/apps/openvpn-web-ui/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openvpn-web-ui
  namespace: default
spec:
  serviceName: openvpn-web-ui
  selector:
    matchLabels:
      app: openvpn-web-ui
  template:
    metadata:
      labels:
        app: openvpn-web-ui
    spec:
      containers:
      - name: openvpn-web-ui
        image: awalach/openvpn-web-ui
        volumeMounts:
          - mountPath: /etc/openvpn
            subPath: openvpn
            name: openvpn-web-ui
          - mountPath: /opt/openvpn-gui/db
            subPath: db
            name: openvpn-web-ui
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 8080
      - name: openvpn
        image: awalach/openvpn
        volumeMounts:
          - mountPath: /etc/openvpn
            subPath: openvpn
            name: openvpn-web-ui
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 1194
          protocol: UDP
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolume
    metadata:
      name: openvpn-web-ui
    spec:
      accessModes: 
        - ReadWriteOnce
      volumeMode: Filesystem
      resources:
        requests:
          storage: 1Gi
