clusters/blimp/apps/openvpn-web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-web-ui
spec:
  type: NodePort
  selector:
    app: openvpn-web-ui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 32665
    protocol: TCP
  - name: ovpn-udp
    port: 1194
    targetPort: 1194
    nodePort: 30784
    protocol: UDP
